# MockSign

./: LICENSE  README.md  main.py  pdf.py  pyproject.toml  requirements.txt  scanner.py  signature.py  utils.py
.github/workflows/: github-actions.yml  release.yml
falsisignpy/: falsisignpy.py  pdf.py  scanner.py  signature.py  utils.py
src/mocksign/: filter.py  mocksign.py  pdf.py  signature.py
test/: test_utils.py
